<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime</string>
    <string name="title_label">Title</string>
    <string name="crime_solved">Solved</string>
    <string name="crime_details">Details</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show subtitle</string>
    <string name="hide_subtitle">Hide subtitle</string>
    <string name="crime_date">Crime Date</string>
    <string name="delete_crime">Delete</string>
    <string name="crime_suspect_text">CHOOSE SUSPECT</string>
    <string name="crime_report_text">SEND CRIME REPORT</string>
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">Criminal Intent Report</string>
    <string name="send_report">Send crime report via</string>
</resources>
