<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="30dp"
              android:layout_marginRight="30dp">

    <TextView
        android:text="@string/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_title_label"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/crime_title"
        android:text="@string/crime_title_hint"
        style="?android:listSeparatorTextViewStyle"/>

    <TextView
        android:text="@string/crime_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_details"
        />

    <Button
        android:text="@string/crime_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crime_date"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:elevation="8dp"
        style="@style/Theme.AppCompat.DayNight"/>

    <CheckBox
        android:text="@string/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/crimeSolved"/>
</LinearLayout>